@@ -214,7 +214,8 @@ _nl_init_domain_conv (domain_file, domain, domainbinding)
 #  if HAVE_ICONV
 	  /* When using GNU libc >= 2.2 or GNU libiconv >= 1.5,
 	     we want to use transliteration.  */
-#   if (defined (__GNU_LIBRARY__) && ((__GLIBC__ == 2 && __GLIBC_MINOR__ >= 2) || (__GLIBC__ > 2))) || (_LIBICONV_VERSION >= 0x0105)
+#   if (__GLIBC__ == 2 && __GLIBC_MINOR__ >= 2) || __GLIBC__ > 2 \
+       || _LIBICONV_VERSION >= 0x0105
 	  len = strlen (outcharset);
 	  {
 	    char *tmp = (char *) alloca (len + 10 + 1);
@@ -224,7 +225,8 @@ _nl_init_domain_conv (domain_file, domain, domainbinding)
 	  }
 #   endif
 	  domain->conv = iconv_open (outcharset, charset);
-#   if (defined (__GNU_LIBRARY__) && ((__GLIBC__ == 2 && __GLIBC_MINOR__ >= 2) || (__GLIBC__ > 2))) || (_LIBICONV_VERSION >= 0x0105)
+#   if (__GLIBC__ == 2 && __GLIBC_MINOR__ >= 2) || __GLIBC__ > 2 \
+       || _LIBICONV_VERSION >= 0x0105
 	  freea (outcharset);
 #   endif
 #  endif
