@@ -1,5 +1,9 @@
 2001-11-27  Ulrich Drepper  <drepper@redhat.com>
 
+	* loadmsgcat.c (_nl_init_domain_conv): Modify #if expression.
+
+2001-11-27  Ulrich Drepper  <drepper@redhat.com>
+
 	* plural-eval.c (plural_eval): Rename back from PLURAL_EVAL.
 	* plural-exp.h (PLURAL_EVAL): Remove declaration.
 	* dcigettext.c Include plural-eval.c.
